2013-09-02 Miguel de Dios <miguel.dedios@artica.es>
	
	* util/pandora_xml_stress.pl: fixed perl warning and set the default
	temp directory correctly.
	
	* util/pandora_xml_stress.conf: added lost parameters
	"directory_confs" and "directory_temp".

2013-08-29 Miguel de Dios <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/Core.pm: into the function "pandora_module_unknown"
	now checks if the module have disable unknown events.

2013-08-29 Miguel de Dios <miguel.dedios@artica.es>
	
	* util/pandora_manage.pl: added support to disable/enable unknown
	events for modules.

2013-08-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* conf/pandora_server.conf.new: set the policy queues as default
	running.

2013-08-13  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Use the agent's address if ip_target
	  is not set.

	* lib/PandoraFMS/Core.pm: Fixed a warning.

	* conf/pandora_server.conf.new,
	  lib/PandoraFMS/Config.pm,
	  lib/PandoraFMS/SNMPServer.pm: Added SNMP storm protection.

2013-08-05 Miguel de Dios <miguel.dedios@artica.es>

	* ChangeLog: lost line about "lib/PandoraFMS/PredictionServer.pm"
	uploaded changes for SLA value of service.

2013-08-05 Miguel de Dios <miguel.dedios@artica.es>

	* util/pandora_snmp.sh: added first and weird version of tool to
	generate a lot of traps snmp for Pandora. Needs to improve.

2013-08-01  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Changed the name of the self-monitoring XML
	  files. Fixes bug #2365.

2013-08-01  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm,
	  lib/PandoraFMS/SNMPServer.pm,
	  lib/PandoraFMS/Server.pm,
	  lib/PandoraFMS/PluginServer.pm,
	  lib/PandoraFMS/ProducerConsumerServer.pm,
	  lib/PandoraFMS/PredictionServer.pm,
	  lib/PandoraFMS/ReconServer.pm,
	  lib/PandoraFMS/NetworkServer.pm,
	  lib/PandoraFMS/WMIServer.pm: Added clean-up code to avoid resource
	  leaks when there is a crash and the server has to auto-restart.
