@@ -1,3 +1,7 @@
+2013-09-03  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/Core.pm: Added support for tag phone information.
+
 2013-09-02 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* util/pandora_xml_stress.pl: fixed perl warning and set the default
